2005-12-10  Per Bothner  <per@bothner.com>

	* kawa/standard/load.java (apply): Add extra argument.
	Skip that many lines.
	(apply2): Update to match.
	* kawa/Shell.java (runFile): Also add extra skipLines argument.
	* kawa/repl.java: Update runFile callers.
	(processArgs): Handle new --script and --scriptN options.

	* kawa/standard/load.java (apply): Remove some hacks to map "class name"
	to filename, and special .scm handling.
	In return, we now allow general URLs in addition to filename.
	(loadSource(String,Environment)): Remove static method.

2005-12-05  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (createReadTable): Use '\\' for
	postfixLookupOperator instead of '`'.

2005-12-04  Per Bothner  <per@bothner.com>

	Handle Syntactic sugar to map OBJECT`NAME to ($lookup$ OBJECT 'NAME).
	* kawa/standard/Scheme.java (initScheme): Define "$lookup$" function.
	(createReadTable): Bind '`' to postfixLookupOperator.

	* kawa/lang/Translator (rewrite_pair): Be a little more conservative
	with xml names: Only map to make-element if prefix matches.

	* kawa/standard/Scheme.java (initScheme): Define define-xml-namespace.
	(html): Define as an xml-namespace.
	* kawa/lang/Translator (asXmlNamespace): New method.
	(rewrite_pair):  Translate application of xml-names to make-element.

2005-12-03  Per Bothner  <per@bothner.com>

	* kawa/lang/Quote.java (rewrite): Fix error message.

	* kawa/lang/Translator.java (namespaceResolve): Combine code paths
	to reduce code duplication.

	* kawa/lang/Translator.java (namespaceResolve): Use new makeExp method.

2005-11-30  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewriteBody): Set/reset curMethodLambda
	if we're in a top-level methods and supertype has been specified.
	* kawa/standard/thisRef.java (rewriteForm): Allow (this) in a top-level
	function whose module has the super-type explicitly specified.  In
	that case create a matching Declaration, if needed.

2005-11-29  Per Bothner  <per@bothner.com>
